github_data_collector/src/data/issue_comment/1technophile_OpenMQTTGateway.txt
Is it possible to increase the time of the state ON (maybe 0.5 sec) of the receive ans send leds when a code is receved or sent?
It would be nice if OMG also had a web user interface like Tasmota for changing parameters online.
A console included in the web interface (similar to Tasmota) would also be useful for debugging.
Thanks!
This PR adds support for these weather stations:
- Venus W174/W132
- Auriol H13726   (tested)
- Hama EWS 1500
- Meteoscan W155/W160

I tested this script on ESP-WROOM-32. 
Hi,
is it planned to insert a WEBGui always active where to modify the functions of all GPIOs pin and a console where to see any messages such as the TASMOTA?
This to avoid every time to compile the Firmware when i want to modify something.

HI, is it possible to use OMG with the IR sensor as of Volkszaheler.org which is a smartmeter for Electricity?

There is a SMB Protokoll to interpretate the Code, and the related SW is here: https://github.com/volkszaehler/vzlogger.

In principle they use currently a PI but a ESP in my view could do the same.


Hello,

I tried almost everything I think to get the openmqttgateway installed on my esp32 but don't succeed in it.

Error I get at this point is :
ZgatewayBT:453:49: error: 'class BLEAdvertisedDevice' has no member named 'getServiceDataCount'

Error below is :

ZgatewayBT:457:70: error: no matching function for call to 'BLEAdvertisedDevice::getServiceData(int&)'

           std::string serviceData = advertisedDevice.getServiceData(j);

In file included from D:\Software\arduino-1.8.10-windows\arduino-1.8.10\portable\packages\esp32\hardware\esp32\1.0.4\libraries\BLE\src/BLEClient.h:22:0,

                 from D:\Software\arduino-1.8.10-windows\arduino-1.8.10\portable\packages\esp32\hardware\esp32\1.0.4\libraries\BLE\src/BLEDevice.h:19,

                 from Z:\xxxx\openmqttgateway_v1\ZgatewayBT.ino:410:
D:\Software\arduino-1.8.10-windows\arduino-1.8.10\portable\packages\esp32\hardware\esp32\1.0.4\libraries\BLE\src/BLEAdvertisedDevice.h:38:14: note: candidate: std::__cxx11::string BLEAdvertisedDevice::getServiceData()

  std::string getServiceData();

              ^

D:\Software\arduino-1.8.10-windows\arduino-1.8.10\portable\packages\esp32\hardware\esp32\1.0.4\libraries\BLE\src/BLEAdvertisedDevice.h:38:14: note:   candidate expects 0 arguments, 1 provided

ZgatewayBT:475:87: error: no matching function for call to 'BLEAdvertisedDevice::getServiceDataUUID(int&)'

           BLEdata.set("servicedatauuid", (char *)advertisedDevice.getServiceDataUUID(j).toString().c_str());

                                                                                       ^

In file included from D:\Software\arduino-1.8.10-windows\arduino-1.8.10\portable\packages\esp32\hardware\esp32\1.0.4\libraries\BLE\src/BLEClient.h:22:0,

                 from D:\Software\arduino-1.8.10-windows\arduino-1.8.10\portable\packages\esp32\hardware\esp32\1.0.4\libraries\BLE\src/BLEDevice.h:19,

                 from Z:\xxxx\openmqttgateway_v1\ZgatewayBT.ino:410:

D:\Software\arduino-1.8.10-windows\arduino-1.8.10\portable\packages\esp32\hardware\esp32\1.0.4\libraries\BLE\src/BLEAdvertisedDevice.h:39:14: note: candidate: BLEUUID BLEAdvertisedDevice::getServiceDataUUID()

  BLEUUID     getServiceDataUUID();

              ^

D:\Software\arduino-1.8.10-windows\arduino-1.8.10\portable\packages\esp32\hardware\esp32\1.0.4\libraries\BLE\src/BLEAdvertisedDevice.h:39:14: note:   candidate expects 0 arguments, 1 provided


Can someone help me fixing this


Yes. at least for the switch entities, they are most likely going to be used. Looking at it from a higher perspective, currently gatewayname is used in the MQTT messages and mac address is used for constituting uniq-ids (these are used by hass internally). Currently I use gatewayname as a unique name in my environment (and my local mods make them part of the name, so I can distinguish in hass from the entity name which OMG it is), so I know which rfbridge (in my case) processed the messages, this defeats the purpose of preventing duplicates.

I would like to suggest following modifications/suggestions:

leave uniq_id as they are, they are used by hass internally,
define an identifier in user_config.h , which becomes part of the name of the entities e.g. omg1_erase,omg1_restart, omg2_erase.. etc,
define an identifier for part of the MQTT message (send only), shared between all OMGs so duplicate prevention works,
use then entity name as discussed earlier (omg1_erase, omg2_erase) as part of the MQTT message send to the OMG, so only that particular OMG reacts to the command.
I realize this makes things more complicated, but at the moment gatewayname is used for multiple purposes, creating sort of conflicts, between duplicate prevention and identification.
hi,i find a bug,and it can reproduce. When i input the configuration in wifimanager,router ssid and password,mqtt username and password,and mqtt server ip and port.
It can connect the router .but in the log ,it still connect 192.168.1.17
the log:

*WM: [2] . 
*WM: [2] Connection result: WL_CONNECTED
*WM: [3] lastconxresult: WL_CONNECTED
*WM: [1] AutoConnect: SUCCESS 
*WM: [1] STA IP Address: 192.168.2.62
connected...yeey :)
saving config
failed to open config file for writing
{"mqtt_server":"192.168.1.17","mqtt_port":"1883","mqtt_user":"your_username","mqtt_pass":"your_password","mqtt_topic":"home/","gateway_name":"OpenMQTTGateway_ESP8266_RF2"}OpenMQTTGateway mac: 
3C:71:BF:38:E2:7B
OpenMQTTGateway ip: 
192.168.2.62
1883
Connecting to MQTT by IP adress
192.168.1.17
RF_EMITTER_PIN 
3
RF_RECEIVER_PIN 
0
ZgatewayRF2 setup done 
MQTT_MAX_PACKET_SIZE
1024
Setup OpenMQTTGateway end
MQTT connection...
failure_number


i use nodemcuv2-rf-firmware.bin and it is OpenMQTTGateway v0.9.2

i hope you can help me fix the bug.If it is not a bug,plese tell me how to do.
i need the gateway and i think it is a great thing that you create it.
thank you
Hi,

Related to issue #221, which had the request for a status LED on the Sonoff RF Bridge. I would like to request the option to invert the LED.

The `WIFI_LED` on the `433RFBRDIGE R2` is connected to `GPIO13`. Defining `led_info 13` will indeed light the LED.
However it seems to be inverted. Lighting most of the time and turning off during transmission.

Would it be possible to implement a inverse option on the 3 leds, like the `#define LED1_PIN_INVERSE` in the Espurna code? 
Hi, im running 0.9.3rc wiht RF receiver and DHT

on platformio.ino i enabled:
default_envs = nodemcuv2-rf


sometimes i find the nodeMCU halted with this continuous message on serial:

wifi disconnected
wifi disconnected
wifi disconnected
wifi disconnected
wifi disconnected
wifi disconnected
wifi disconnected
wifi disconnected
wifi disconnected
wifi disconnected
wifi disconnected
wifi disconnected

when i press reset button the system restart correctly.
Is it possible to do an automatic restart in this case?

